--- a/ConsultorioOdontologicoEE-war/pom.xml
+++ b/ConsultorioOdontologicoEE-war/pom.xml
@@ -59,6 +59,11 @@
             <artifactId>omnifaces</artifactId>
             <version>2.2</version>
         </dependency>
+        <dependency>
+            <groupId>net.sf.jasperreports</groupId>
+            <artifactId>jasperreports</artifactId>
+            <version>5.2.0</version>
+        </dependency>
     </dependencies>
 
     <build>
