novas tabelas e add flyway para rodar com maven

--- a/ConsultorioOdontologicoEE-ejb/pom.xml
+++ b/ConsultorioOdontologicoEE-ejb/pom.xml
@@ -52,7 +52,11 @@
             <artifactId>guava</artifactId>
             <version>18.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+            <version>4.0</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -101,6 +105,16 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.flywaydb</groupId>
+                <artifactId>flyway-maven-plugin</artifactId>
+                <version>3.1</version>
+                <configuration>
+                    <url>jdbc:postgresql://localhost:5432/odontoenterprise</url>
+                    <user>postgres</user>
+                    <password>postgres</password>
+                </configuration>
             </plugin>
         </plugins>
     </build>
